# clawler_platform

./: .env.example  .env.worker.example  .gitignore  Dockerfile  README.md  crawl_targets_export.csv  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
airflow/dags/: dag_content_pipeline.py  dag_facebook_groups.py  dag_facebook_pages.py  dag_facebook_profiles.py  dag_forums.py  dag_news.py  dag_report_email.py
clawler_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: keywords.yaml
crawling_facebook/: HUONG_DAN.md  pyproject.toml
crawling_facebook/fb_crawl/: __init__.py  __main__.py  cli.py  facebook_extract.py  filters.py  output.py  page_service.py  parser.py  playwright_crawler.py  playwright_page_crawler.py  playwright_profile_crawler.py  profile_parser.py  profile_service.py  service.py  storage.py  types.py
crawling_facebook/scripts/: debug_discover.py  debug_image.py  debug_page_times.py  debug_video.py  fb-crawl.sh  setup.sh
csv/: 01a_entity_normalization_geo.csv  01b_entity_normalization_government_org.csv  01c_entity_normalization_company.csv  01d_entity_normalization_industry.csv  01e_entity_normalization_leader.csv  01f_entity_normalization_kol.csv  01g_entity_normalization_other.csv  dataset_1000_tu_khoa_cam_xuc.csv
docs/: classification-pipeline.md  dag-flow.md  fb-session-pool.md  fb-worker-remote.md  local-dev-setup.md  vps-deploy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
platform_app/adapters/: document_store.py  fb_pg_storage.py
rabbitmq/: consumer-timeout.conf
scripts/: import_entity_gazetteer_csv.py  import_fb_credentials_from_mongo.py  import_fb_sessions_to_db.py  import_new_profile_accounts.py  import_telecom_entities.py  init-postgres.sh  init-postgres.sql  mau_import_chu_de_tu_khoa.csv  mxh_excel_5g_catalog_report.py  mxh_excel_ds_to_5g_catalog_report.py  mxh_excel_to_competitor_word_report.py  mxh_excel_to_event_word_report.py  mxh_excel_to_word_report.py  seed_admin.py  seed_admin_catalogs.sql  seed_data.json  seed_data_2.json  seed_data_3.json  seed_entities.sql  seed_from_json.py  seed_mobifone_news_forums.sql  seed_targets.sql  set_fb_account_credentials.py
tests/: test_account_pool.py  test_document_store.py  test_facebook_runner.py  test_fb_pg_storage.py  test_parsers.py  test_pipeline.py
(+131 files in other folders)
