[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clawler-platform"
version = "0.1.0"
description = "Multi-platform crawling platform (FB group/page, forum, news) orchestrated by Airflow"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.9,<3",
    "apache-airflow-providers-celery>=3.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_app*"]
