[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clawler-platform"
version = "0.1.0"
description = "Multi-platform crawling platform (FB group/page, forum, news) orchestrated by Airflow"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "feedparser>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "pyotp>=2.9",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.9,<3",
    "apache-airflow-providers-celery>=3.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_app*"]
