[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crawling-facebook"
version = "0.1.0"
description = "Crawl bài viết và bình luận từ nhóm Facebook"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.3",
]

[project.scripts]
fb-crawl = "fb_crawl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fb_crawl*"]
